# cudalator

./: .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  index.html  mkdocs.yml  requirements.txt
data/bit_lib/simple_adder_test/: tb_adder.v
data/bit_lib/src/: Bit.hpp  cuda_compat.hpp
data/bit_lib/tests/: Makefile  generate_tests.py  run_and_compare.py  special_ops_tb.v  special_ops_test.cpp
data/rtl/: adder.sv  always_test.sv  big_constant.sv  bitlength.sv  blocking_assignments.sv  concat.sv  connection_same_name.sv  counter.sv  double_int_adder.sv  error_invalid_signal.sv  ff.sv  first.sv  for_stmt.sv  int_adder.sv  int_mux.sv  nested.sv  nested_scope.sv  operations.sv  register.sv  scopes.sv  scoping.sv  second.sv  select.sv  show.sv  simple.sv  simple_connection.sv  statements.sv
data/rtl/multiple_files/: file1.sv  file2.sv
data/runtime/: CMakeLists.txt  Makefile
data/runtime/codegen-example/: CMakeLists.txt
data/runtime/runtime-lib/: CMakeLists.txt  Process.hpp  VLSignal.cpp
data/runtime/src/: main.cpp
data/runtime/src/codegen/: module.hpp
data/runtime/src/runtime/: Bit.hpp  ChangeType.hpp  Process.hpp  Runtime.cpp  Runtime.hpp  Vcd.hpp
data/runtime/tests/test_additions/: test_cpp.cpp
data/runtime_cpu/: CMakeLists.txt
data/runtime_cpu/src/: main.cpp
data/runtime_cpu/src/codegen/: module.hpp
data/runtime_cpu/src/runtime/: ChangeType.hpp  Process.hpp  Runtime.cpp  Runtime.hpp  Stats.cpp  Utils.hpp
data/runtime_cpu/tests/: run_tests.py
data/runtime_cpu/tests/test_additions/: test_sv.sv
data/runtime_gpu/: CMakeLists.txt  Makefile
data/runtime_gpu/src/: main.cpp
data/runtime_gpu/src/runtime/: ChangeType.hpp  Runtime.cu  Runtime.hpp  Stats.cpp  Stats.hpp  UserProvided.hpp  Utils.hpp
data/runtime_wip/: Makefile  bit_ops_tb.v  generate_tests.py  increment_ops_test.cpp  inside_test.cpp  run_and_compare.py  runtime.hpp  special_ops_test.cpp  test_semantics.v
data/runtime_wip/tests/: Makefile  generate_tests.py  run_and_compare.py  special_ops_test.cpp  test_semantics.v  test_vectors.txt
data/simple_adder_test/: adder.sv  adder_cpp.hpp  run_adder_test.py  test_adder_runner.cpp
demos/adder/: adder.sv  main.cpp  main.cu
demos/counter/: counter.sv  main.cpp  main.cu
demos/full_adder/: full_adder.sv  main.cpp
demos/int_adder/: main.cpp
demos/int_processes/: int_processes.sv  main.cpp
demos/isca90_s5378/: main.cu  s5378.sv
demos/isca90_s5378/tb/: run_verilator.sh  verilator.cpp
demos/multiplier/: booth_encoder.sv  dadda_tree.sv  fa.sv  ha.sv  main.cpp  main.cu  r4mbe_dadda_multiplier_8bit.sv  top.txt
demos/multiplier/tb/: .gitignore  run.sh  tb.sv
docs/: index.md
include/CIR/: CIR.h
include/cir/: CIR.h  CIR_Base.h  GenericAst.h  nodes.txt
rtl_examples/: adder.sv
runtime/: CMakeLists.txt
runtime/runtime-lib/: VLSignal.hpp
runtime/src/: main.cpp
search/: search_index.json
src/: CudalatorConfig.hpp  Exceptions.hpp  SampleListener.cpp  cir.rs  cir_printer.rs  frontend.rs  main.cpp  main.rs  utils.hpp
src/backend/: Backend.cpp  Backend.hpp  CMakeLists.txt  CirPrinter.cpp  CirPrinter.hpp  CodeGenerator.cpp  CodeGenerator.hpp  CppEmitter.cpp  CppEmitter.hpp  PassManager.cpp  PassManager.hpp  codegen.rs  mod.rs  pass_manager.rs  pass_populate_sensitivity.rs
src/backend/passes/: PassBase.hpp  PopulateSensitivityList.cpp  PopulateSensitivityList.hpp  mod.rs  pass_populate_sensitivity.rs  pass_remove_blocking_assignments.rs  pass_simplify_assignments.rs
src/frontend/: frontend_errors.rs  sv_frontend.rs
src/frontend-sv/: CMakeLists.txt  Entry.cpp  Entry.hpp  FrontendError.hpp  SurelogParser.cpp  SurelogParser.hpp  SurelogTranslator.cpp  SurelogTranslator.hpp  SystemVerilogFrontend.cpp  SystemVerilogFrontend.hpp  utils.cpp  utils.hpp
src/include/: SampleListener.h
src/runtime/: Makefile  bit_ops_tb.v  main.cpp  runtime.hpp
surelog-sys/: Cargo.toml  build.rs
surelog-sys/src/: lib.rs
surelog-sys/surelog_cpp_wrapper/: surelog_cpp_wrapper.cpp  surelog_cpp_wrapper.hpp
tester/: README.md  assignment_op.sv  bit_length.sv  blocking.sv  concat_assing.sv  narrow_assign.sv  run_test.sh  static_test.sv
tools/: run_demo.sh  run_demo_gpu.sh  run_demo_jetson.sh  run_test.sh
