[package]
name = "cudalator-compiler"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "surelog-sys"
]

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.6"
log = "0.4.25"
num-bigint = "0.4.6"
num-traits = "0.2.19"
paste = "1.0.15"
surelog-sys = { path = "./surelog-sys/" }
